// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Creation of the Option control 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#004358",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "transitionDelay": "0.5s",
    }
  }
>
  <styled.div
    className="ui-option test-class"
    disabled={false}
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "inherit",
        "color": "inherit",
      }
    }
    visible={true}
  >
    <ButtonToggle
      bgColorOff="inherit"
      bgColorOn="inherit"
      className=""
      contentEditable={false}
      direction="right"
      disabled={false}
      fgColorOff="inherit"
      fgColorOn="inherit"
      focus={false}
      height=""
      iconName="bomb"
      iconNameOff="square-o"
      iconNameOn="check-square-o"
      iconStyle=""
      id=""
      initialToggle={true}
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      onClick={[Function]}
      optionType={0}
      selected={true}
      sizing="normal"
      style={
        Object {
          "backgroundColor": "inherit",
          "color": "inherit",
        }
      }
      testing={true}
      text="test"
      theme={Object {}}
      visible={true}
      width=""
      xcss={null}
    />
    <span>
      test
    </span>
  </styled.div>
</ThemeProvider>
`;

exports[`Test Option control click event 1`] = `
<Option
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  optionType={0}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "inherit",
      "color": "inherit",
    }
  }
  testing={true}
  text=""
  theme={Object {}}
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-option"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "inherit",
          "color": "inherit",
        }
      }
      visible={true}
    >
      <div
        className="ui-option sc-bxivhb jWadyl"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "inherit",
          }
        }
      >
        <ButtonToggle
          bgColorOff="inherit"
          bgColorOn="inherit"
          className=""
          contentEditable={false}
          direction="right"
          disabled={false}
          fgColorOff="inherit"
          fgColorOn="inherit"
          focus={false}
          height=""
          iconName="bomb"
          iconNameOff="square-o"
          iconNameOn="check-square-o"
          iconStyle=""
          id=""
          initialToggle={false}
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          onClick={[Function]}
          optionType={0}
          selected={false}
          sizing="normal"
          style={
            Object {
              "backgroundColor": "inherit",
              "color": "inherit",
            }
          }
          testing={true}
          text=""
          theme={Object {}}
          visible={true}
          width=""
          xcss={null}
        >
          <ThemeProvider
            theme={
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#004358",
                "color": "#000000",
                "headerBackgroundColor": "#004358",
                "headerForegroundColor": "#ffffff",
                "headerHoverColor": "#ffe11a",
                "hoverColor": "#c0c0c0",
                "inputBorderColor": "#c0c0c0",
                "transitionDelay": "0.5s",
              }
            }
          >
            <Button
              bgColorOff="inherit"
              bgColorOn="inherit"
              className="ui-button-toggle"
              contentEditable={false}
              direction="right"
              disabled={false}
              fgColorOff="inherit"
              fgColorOn="inherit"
              focus={false}
              height=""
              iconName="square-o"
              iconNameOff="square-o"
              iconNameOn="check-square-o"
              iconStyle=""
              id=""
              initialToggle={false}
              location="none"
              noedit={false}
              nohover={false}
              noripple={true}
              onClick={[Function]}
              optionType={0}
              selected={false}
              sizing="normal"
              style={
                Object {
                  "backgroundColor": "inherit",
                  "color": "inherit",
                }
              }
              testing={true}
              text=""
              theme={Object {}}
              visible={true}
              width=""
              xcss={null}
            >
              <ThemeProvider
                theme={
                  Object {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#004358",
                    "color": "#000000",
                    "headerBackgroundColor": "#004358",
                    "headerForegroundColor": "#ffffff",
                    "headerHoverColor": "#ffe11a",
                    "hoverColor": "#c0c0c0",
                    "inputBorderColor": "#c0c0c0",
                    "transitionDelay": "0.5s",
                  }
                }
              >
                <styled.div
                  className="ui-button nohover ui-button-toggle"
                  disabled={false}
                  onClick={[Function]}
                  style={
                    Object {
                      "backgroundColor": "inherit",
                      "color": "inherit",
                    }
                  }
                  visible={true}
                >
                  <div
                    className="ui-button nohover ui-button-toggle sc-htpNat eaVJAo"
                    disabled={false}
                    onClick={[Function]}
                    style={
                      Object {
                        "backgroundColor": "inherit",
                        "color": "inherit",
                      }
                    }
                  >
                    <Icon
                      className=""
                      contentEditable={false}
                      direction="right"
                      disabled={false}
                      focus={false}
                      height=""
                      iconName="square-o"
                      id=""
                      imageFile=""
                      location="none"
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      selected={false}
                      sizing="normal"
                      style={Object {}}
                      testing={true}
                      theme={Object {}}
                      visible={true}
                      width=""
                      xcss={null}
                    >
                      <ThemeProvider
                        theme={
                          Object {
                            "backgroundColor": "#ffffff",
                            "borderColor": "#004358",
                            "color": "#000000",
                            "headerBackgroundColor": "#004358",
                            "headerForegroundColor": "#ffffff",
                            "headerHoverColor": "#ffe11a",
                            "hoverColor": "#c0c0c0",
                            "inputBorderColor": "#c0c0c0",
                            "transitionDelay": "0.5s",
                          }
                        }
                      >
                        <styled.i
                          className="ui-icon fa fa-fw fa-square-o"
                          contentEditable={false}
                          direction="right"
                          disabled={false}
                          focus={false}
                          height=""
                          iconName="square-o"
                          id=""
                          imageFile=""
                          location="none"
                          noedit={false}
                          nohover={false}
                          noripple={false}
                          selected={false}
                          sizing="normal"
                          style={Object {}}
                          testing={true}
                          theme={Object {}}
                          visible={true}
                          width=""
                          xcss={null}
                        >
                          <i
                            className="ui-icon fa fa-fw fa-square-o sc-bdVaJa rkmGs"
                            contentEditable={false}
                            direction="right"
                            disabled={false}
                            height=""
                            id=""
                            selected={false}
                            style={Object {}}
                            width=""
                          />
                        </styled.i>
                      </ThemeProvider>
                    </Icon>
                  </div>
                </styled.div>
              </ThemeProvider>
            </Button>
          </ThemeProvider>
        </ButtonToggle>
      </div>
    </styled.div>
  </ThemeProvider>
</Option>
`;

exports[`Test disabling of the Option control 1`] = `
<Option
  className=""
  contentEditable={false}
  direction="right"
  disabled={true}
  focus={false}
  height=""
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  optionType={0}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "inherit",
      "color": "inherit",
    }
  }
  testing={true}
  text=""
  theme={Object {}}
  visible={true}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-option"
      disabled={true}
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "inherit",
          "color": "inherit",
        }
      }
      visible={true}
    >
      <div
        className="ui-option sc-bxivhb fYpOfz"
        disabled={true}
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "inherit",
          }
        }
      >
        <ButtonToggle
          bgColorOff="inherit"
          bgColorOn="inherit"
          className=""
          contentEditable={false}
          direction="right"
          disabled={true}
          fgColorOff="inherit"
          fgColorOn="inherit"
          focus={false}
          height=""
          iconName="bomb"
          iconNameOff="square-o"
          iconNameOn="check-square-o"
          iconStyle=""
          id=""
          initialToggle={false}
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          onClick={[Function]}
          optionType={0}
          selected={false}
          sizing="normal"
          style={
            Object {
              "backgroundColor": "inherit",
              "color": "inherit",
            }
          }
          testing={true}
          text=""
          theme={Object {}}
          visible={true}
          width=""
          xcss={null}
        >
          <ThemeProvider
            theme={
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#004358",
                "color": "#000000",
                "headerBackgroundColor": "#004358",
                "headerForegroundColor": "#ffffff",
                "headerHoverColor": "#ffe11a",
                "hoverColor": "#c0c0c0",
                "inputBorderColor": "#c0c0c0",
                "transitionDelay": "0.5s",
              }
            }
          >
            <Button
              bgColorOff="inherit"
              bgColorOn="inherit"
              className="ui-button-toggle"
              contentEditable={false}
              direction="right"
              disabled={true}
              fgColorOff="inherit"
              fgColorOn="inherit"
              focus={false}
              height=""
              iconName="square-o"
              iconNameOff="square-o"
              iconNameOn="check-square-o"
              iconStyle=""
              id=""
              initialToggle={false}
              location="none"
              noedit={false}
              nohover={false}
              noripple={true}
              onClick={[Function]}
              optionType={0}
              selected={false}
              sizing="normal"
              style={
                Object {
                  "backgroundColor": "inherit",
                  "color": "inherit",
                }
              }
              testing={true}
              text=""
              theme={Object {}}
              visible={true}
              width=""
              xcss={null}
            >
              <ThemeProvider
                theme={
                  Object {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#004358",
                    "color": "#000000",
                    "headerBackgroundColor": "#004358",
                    "headerForegroundColor": "#ffffff",
                    "headerHoverColor": "#ffe11a",
                    "hoverColor": "#c0c0c0",
                    "inputBorderColor": "#c0c0c0",
                    "transitionDelay": "0.5s",
                  }
                }
              >
                <styled.div
                  className="ui-button nohover ui-button-toggle"
                  disabled={true}
                  onClick={[Function]}
                  style={
                    Object {
                      "backgroundColor": "inherit",
                      "color": "inherit",
                    }
                  }
                  visible={true}
                >
                  <div
                    className="ui-button nohover ui-button-toggle sc-htpNat cDPcSb"
                    disabled={true}
                    onClick={[Function]}
                    style={
                      Object {
                        "backgroundColor": "inherit",
                        "color": "inherit",
                      }
                    }
                  >
                    <Icon
                      className=""
                      contentEditable={false}
                      direction="right"
                      disabled={false}
                      focus={false}
                      height=""
                      iconName="square-o"
                      id=""
                      imageFile=""
                      location="none"
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      selected={false}
                      sizing="normal"
                      style={Object {}}
                      testing={true}
                      theme={Object {}}
                      visible={true}
                      width=""
                      xcss={null}
                    >
                      <ThemeProvider
                        theme={
                          Object {
                            "backgroundColor": "#ffffff",
                            "borderColor": "#004358",
                            "color": "#000000",
                            "headerBackgroundColor": "#004358",
                            "headerForegroundColor": "#ffffff",
                            "headerHoverColor": "#ffe11a",
                            "hoverColor": "#c0c0c0",
                            "inputBorderColor": "#c0c0c0",
                            "transitionDelay": "0.5s",
                          }
                        }
                      >
                        <styled.i
                          className="ui-icon fa fa-fw fa-square-o"
                          contentEditable={false}
                          direction="right"
                          disabled={false}
                          focus={false}
                          height=""
                          iconName="square-o"
                          id=""
                          imageFile=""
                          location="none"
                          noedit={false}
                          nohover={false}
                          noripple={false}
                          selected={false}
                          sizing="normal"
                          style={Object {}}
                          testing={true}
                          theme={Object {}}
                          visible={true}
                          width=""
                          xcss={null}
                        >
                          <i
                            className="ui-icon fa fa-fw fa-square-o sc-bdVaJa rkmGs"
                            contentEditable={false}
                            direction="right"
                            disabled={false}
                            height=""
                            id=""
                            selected={false}
                            style={Object {}}
                            width=""
                          />
                        </styled.i>
                      </ThemeProvider>
                    </Icon>
                  </div>
                </styled.div>
              </ThemeProvider>
            </Button>
          </ThemeProvider>
        </ButtonToggle>
      </div>
    </styled.div>
  </ThemeProvider>
</Option>
`;

exports[`Test making the Option control invisible 1`] = `
<Option
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  optionType={0}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "inherit",
      "color": "inherit",
    }
  }
  testing={true}
  text=""
  theme={Object {}}
  visible={false}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#004358",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "transitionDelay": "0.5s",
      }
    }
  >
    <styled.div
      className="ui-option"
      disabled={false}
      onClick={[Function]}
      style={
        Object {
          "backgroundColor": "inherit",
          "color": "inherit",
        }
      }
      visible={false}
    >
      <div
        className="ui-option sc-bxivhb cNLsAc"
        disabled={false}
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "inherit",
            "color": "inherit",
          }
        }
      >
        <ButtonToggle
          bgColorOff="inherit"
          bgColorOn="inherit"
          className=""
          contentEditable={false}
          direction="right"
          disabled={false}
          fgColorOff="inherit"
          fgColorOn="inherit"
          focus={false}
          height=""
          iconName="bomb"
          iconNameOff="square-o"
          iconNameOn="check-square-o"
          iconStyle=""
          id=""
          initialToggle={false}
          location="none"
          noedit={false}
          nohover={false}
          noripple={false}
          onClick={[Function]}
          optionType={0}
          selected={false}
          sizing="normal"
          style={
            Object {
              "backgroundColor": "inherit",
              "color": "inherit",
            }
          }
          testing={true}
          text=""
          theme={Object {}}
          visible={false}
          width=""
          xcss={null}
        >
          <ThemeProvider
            theme={
              Object {
                "backgroundColor": "#ffffff",
                "borderColor": "#004358",
                "color": "#000000",
                "headerBackgroundColor": "#004358",
                "headerForegroundColor": "#ffffff",
                "headerHoverColor": "#ffe11a",
                "hoverColor": "#c0c0c0",
                "inputBorderColor": "#c0c0c0",
                "transitionDelay": "0.5s",
              }
            }
          >
            <Button
              bgColorOff="inherit"
              bgColorOn="inherit"
              className="ui-button-toggle"
              contentEditable={false}
              direction="right"
              disabled={false}
              fgColorOff="inherit"
              fgColorOn="inherit"
              focus={false}
              height=""
              iconName="square-o"
              iconNameOff="square-o"
              iconNameOn="check-square-o"
              iconStyle=""
              id=""
              initialToggle={false}
              location="none"
              noedit={false}
              nohover={false}
              noripple={true}
              onClick={[Function]}
              optionType={0}
              selected={false}
              sizing="normal"
              style={
                Object {
                  "backgroundColor": "inherit",
                  "color": "inherit",
                }
              }
              testing={true}
              text=""
              theme={Object {}}
              visible={false}
              width=""
              xcss={null}
            >
              <ThemeProvider
                theme={
                  Object {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#004358",
                    "color": "#000000",
                    "headerBackgroundColor": "#004358",
                    "headerForegroundColor": "#ffffff",
                    "headerHoverColor": "#ffe11a",
                    "hoverColor": "#c0c0c0",
                    "inputBorderColor": "#c0c0c0",
                    "transitionDelay": "0.5s",
                  }
                }
              >
                <styled.div
                  className="ui-button nohover ui-button-toggle"
                  disabled={false}
                  onClick={[Function]}
                  style={
                    Object {
                      "backgroundColor": "inherit",
                      "color": "inherit",
                    }
                  }
                  visible={false}
                >
                  <div
                    className="ui-button nohover ui-button-toggle sc-htpNat obZDX"
                    disabled={false}
                    onClick={[Function]}
                    style={
                      Object {
                        "backgroundColor": "inherit",
                        "color": "inherit",
                      }
                    }
                  >
                    <Icon
                      className=""
                      contentEditable={false}
                      direction="right"
                      disabled={false}
                      focus={false}
                      height=""
                      iconName="square-o"
                      id=""
                      imageFile=""
                      location="none"
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      selected={false}
                      sizing="normal"
                      style={Object {}}
                      testing={true}
                      theme={Object {}}
                      visible={true}
                      width=""
                      xcss={null}
                    >
                      <ThemeProvider
                        theme={
                          Object {
                            "backgroundColor": "#ffffff",
                            "borderColor": "#004358",
                            "color": "#000000",
                            "headerBackgroundColor": "#004358",
                            "headerForegroundColor": "#ffffff",
                            "headerHoverColor": "#ffe11a",
                            "hoverColor": "#c0c0c0",
                            "inputBorderColor": "#c0c0c0",
                            "transitionDelay": "0.5s",
                          }
                        }
                      >
                        <styled.i
                          className="ui-icon fa fa-fw fa-square-o"
                          contentEditable={false}
                          direction="right"
                          disabled={false}
                          focus={false}
                          height=""
                          iconName="square-o"
                          id=""
                          imageFile=""
                          location="none"
                          noedit={false}
                          nohover={false}
                          noripple={false}
                          selected={false}
                          sizing="normal"
                          style={Object {}}
                          testing={true}
                          theme={Object {}}
                          visible={true}
                          width=""
                          xcss={null}
                        >
                          <i
                            className="ui-icon fa fa-fw fa-square-o sc-bdVaJa rkmGs"
                            contentEditable={false}
                            direction="right"
                            disabled={false}
                            height=""
                            id=""
                            selected={false}
                            style={Object {}}
                            width=""
                          />
                        </styled.i>
                      </ThemeProvider>
                    </Icon>
                  </div>
                </styled.div>
              </ThemeProvider>
            </Button>
          </ThemeProvider>
        </ButtonToggle>
      </div>
    </styled.div>
  </ThemeProvider>
</Option>
`;

exports[`Test retrieval of Option props object 1`] = `
Object {
  "className": "",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "focus": false,
  "height": "",
  "id": "",
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "onClick": [Function],
  "optionType": 0,
  "selected": false,
  "sizing": "normal",
  "style": Object {
    "backgroundColor": "inherit",
    "color": "inherit",
  },
  "testing": true,
  "text": "",
  "theme": Object {},
  "visible": true,
  "width": "",
  "xcss": null,
}
`;
